--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.3.5",
     "@types/validator": "^13.15.10",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.2.3",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.21",
     "postcss": "^8.5.1",
